cmake_minimum_required(VERSION 4.2)
project(zlibcpp)
include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG v1.17.0)
FetchContent_MakeAvailable(googletest)
enable_testing()
add_executable(vector_test test/vector_test.cpp)
target_include_directories(vector_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(vector_test PRIVATE GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(vector_test)