cmake_minimum_required(VERSION 3.28)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(zlibcpp)
include(FetchContent)
include(GoogleTest)
add_library(zlib INTERFACE)
target_include_directories(zlib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_features(zlib INTERFACE cxx_std_17)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG v1.17.0)
FetchContent_MakeAvailable(googletest)
enable_testing()

FetchContent_Declare(benchmark GIT_REPOSITORY https://github.com/google/benchmark.git GIT_TAG v1.9.4)
set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(benchmark)

add_executable(vector_test test/vector_test.cpp)
target_link_libraries(vector_test PRIVATE zlib GTest::gtest_main)
gtest_discover_tests(vector_test)

add_executable(unordered_map_test test/unordered_map_test.cpp)
target_link_libraries(unordered_map_test PRIVATE zlib GTest::gtest_main)
gtest_discover_tests(unordered_map_test)

add_executable(vector_benchmark benchmark/vector_benchmark.cpp)
target_link_libraries(vector_benchmark PRIVATE zlib benchmark::benchmark)